--- a/src/app/modules/coffee-lab/components/question-card/question-card.component.scss
+++ b/src/app/modules/coffee-lab/components/question-card/question-card.component.scss
@@ -2,6 +2,10 @@
     border-bottom: solid 0.5px #d8d8d8;
 }
 
+.no-border {
+    border-bottom: 0;
+}
+
 .mobile-dot {
     @media (max-width: 480px) {
         display: flex;
