--- a/src/app/modules/coffee-lab/components/square-ads/square-ads.component.scss
+++ b/src/app/modules/coffee-lab/components/square-ads/square-ads.component.scss
@@ -46,6 +46,9 @@
         border-bottom-left-radius: 6px;
         border: solid 1px $primary-color;
         color: $dark-color;
+        &:focus {
+            outline: none;
+        }
     }
 
     .popup-email {
